changed css to rtl

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -26,8 +26,8 @@
 
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
   <link rel="stylesheet" href="css/github-prettify-theme.css">
   <script src="js/site.js"></script>
 
@@ -158,12 +158,12 @@
         syntax is simple and it makes coding responsive much easier. Go ahead, resize the browser. </p>
       <div class="example-grid docs-example">
         <div class="row">
-          <div class="one column">One</div>
-          <div class="eleven columns">Eleven</div>
+          <div class="one column" lang='en'>One</div>
+<div class="eleven columns" lang='en'>Eleven</div>
         </div>
         <div class="row">
-          <div class="two columns">Two</div>
-          <div class="ten columns">Ten</div>
+          <div class="two columns" lang='en'>Two</div>
+          <div class="ten columns" lang='en'>Ten</div>
         </div>
         <div class="row">
           <div class="three columns">Three</div>
