--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="dist/css/normalize.css">
+  <!-- <link rel="stylesheet" href="dist/css/normalize.css"> -->
   <link rel="stylesheet" href="dist/css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
 
