--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
   <link rel="stylesheet" href="css/github-prettify-theme.css">
   <script src="js/site.js"></script>
 
@@ -43,7 +43,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2 class="title">یک ساختار آماده خیلی ساده، با رویکردی واکنش‌گرا</h2>
+      <h2 class="title">یک ساختار آماده خیلی ساده‌ و ریسپانسیو</h2>
       <a class="button button-primary" href="https://github.com/dhg/Skeleton/releases/download/2.0.4/Skeleton-2.0.4.zip"
         onClick="_gaq.push(['_trackEvent', 'skeleton', 'download'])">دانلود</a>
       <div class="value-props row">
@@ -53,12 +53,12 @@
         </div>
         <div class="four columns value-prop">
           <img class="value-img" src="images/pens.svg">
-         
+
           استایل‌ها بعنوان یک مبدا برای شروع طراحی شده‌اند و یک فریم ورک نیست
         </div>
         <div class="four columns value-prop">
           <img class="value-img" src="images/watch.svg">
-          شروع سریع بدون نیاز به کامپایل یا نصب 
+          شروع سریع بدون نیاز به کامپایل یا نصب
         </div>
       </div>
     </section>
@@ -67,60 +67,60 @@
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#intro">مقدمه</a></li>
           <li class="navbar-item">
-            <a class="navbar-link" href="#" data-popover="#codeNavPopover">Code</a>
+            <a class="navbar-link" href="#" data-popover="#codeNavPopover">کد</a>
             <div id="codeNavPopover" class="popover">
               <ul class="popover-list">
                 <li class="popover-item">
-                  <a class="popover-link" href="#grid">Grid</a>
+                  <a class="popover-link" href="#grid">صفحه آرایی</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#typography">Typography</a>
+                  <a class="popover-link" href="#typography">تایپو گرافی</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#buttons">Buttons</a>
+                  <a class="popover-link" href="#buttons">دکمه‌ها</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#forms">Forms</a>
+                  <a class="popover-link" href="#forms">فرم‌ها</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#lists">Lists</a>
+                  <a class="popover-link" href="#lists">لیست‌ها</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#code">Code</a>
+                  <a class="popover-link" href="#code">تکه کد</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#tables">Tables</a>
+                  <a class="popover-link" href="#tables">جدول‌ها</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#queries">Queries</a>
+                  <a class="popover-link" href="#queries">ریسپانسیو</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="#utilities">Utilities</a>
+                  <a class="popover-link" href="#utilities">ابزارها</a>
                 </li>
               </ul>
             </div>
           </li>
-          <li class="navbar-item"><a class="navbar-link" href="#examples">Examples</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#examples">مثال</a></li>
           <li class="navbar-item">
-            <a class="navbar-link" href="#" data-popover="#moreNavPopover">More</a>
+            <a class="navbar-link" href="#" data-popover="#moreNavPopover">بیشتر</a>
             <div id="moreNavPopover" class="popover">
               <ul class="popover-list">
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton">On Github</a>
+                  <a class="popover-link" href="https://github.com/dhg/Skeleton">گیت‌هاب</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#browser-support">Browsers</a>
+                  <a class="popover-link" href="https://github.com/dhg/Skeleton#browser-support">مرورگر</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#license">License</a>
+                  <a class="popover-link" href="https://github.com/dhg/Skeleton#license">لایسنی</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#extensions">Extensions</a>
+                  <a class="popover-link" href="https://github.com/dhg/Skeleton#extensions">افضونه</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton/releases">Versions</a>
+                  <a class="popover-link" href="https://github.com/dhg/Skeleton/releases">نسخه‌ها</a>
                 </li>
                 <li class="popover-item">
                   <a class="popover-link" href="https://github.com/dhg/Skeleton#colophon">Colophon</a>
@@ -134,36 +134,48 @@
 
     <!-- Why use Skeleton -->
     <div class="docs-section" id="intro">
-      <h6 class="docs-header">Is Skeleton for you?</h6>
-      <p>You should use Skeleton if you're embarking on a smaller project or just don't feel like you need all the
-        utility of larger frameworks. Skeleton only styles a handful of standard HTML elements and includes a grid, but
-        that's often more than enough to get started. In fact, <u>this site is built on Skeleton and has ~200 lines of
-          custom CSS</u> (half of which is the docking navigation).</p>
-      <p>Love Skeleton and want to Tweet it, share it, or star it? Well, I appreciate that <3</p> <a href="https://twitter.com/share"
-          class="twitter-share-button" data-url="http://www.getskeleton.com" data-text="Skeleton - A dead simple, responsive boilerplate."
-          data-via="dhg" data-related="dhg">Tweet</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-          <!-- <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.getskeleton.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=true&amp;height=21&amp;appId=151131931646052" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px; width:140px" allowTransparency="true"></iframe> -->
-          <iframe src="http://ghbtns.com/github-btn.html?user=dhg&repo=Skeleton&type=watch&count=true"
-            allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-          <iframe src="http://ghbtns.com/github-btn.html?user=dhg&repo=Skeleton&type=fork&count=true" allowtransparency="true"
-            frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <h5>اسکلت به درد چه کسی میخورد؟</h5>
+
+      <p>
+        اگر یک پروژه کوچک شروع میکنید و یا احساس میکنید به ابزار فریم ورک‌های بزرگتر نیاز
+        ندارید میتونید از اسکلت استفاده کنید. اسکلت حاوی المان‌های استاندارد اچ‌ تی ام ال به همراه یک سیستم گرید مناسب
+        برای صفحه آرایی است.
+        در حقیقت این سایت با اسکلت ساخته شده و کمتر از ۲۰۰ خط سی اس اس دارد.
+
+
+      </p>
+      <!-- <p>Love Skeleton and want to Tweet it, share it, or star it? Well, I appreciate that <3 </p>  -->
+      <p>از اسکلت خوشت اومده و میخوای به اشتراک بذاری یا یه ستاره گیت‌هاب بدی؟ خب ممنونم :) </p>
+
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.getskeleton.com" data-text="Skeleton - A dead simple, responsive boilerplate."
+        data-via="dhg" data-related="dhg">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      <!-- <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.getskeleton.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=true&amp;height=21&amp;appId=151131931646052" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px; width:140px" allowTransparency="true"></iframe> -->
+      <iframe src="http://ghbtns.com/github-btn.html?user=dhg&repo=Skeleton&type=watch&count=true" allowtransparency="true"
+        frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=dhg&repo=Skeleton&type=fork&count=true" allowtransparency="true"
+        frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
 
     <!-- Grid -->
     <div class="docs-section" id="grid">
-      <h6 class="docs-header">The grid</h6>
-      <p>The grid is a <u>12-column fluid grid with a max width of 960px</u>, that shrinks with the browser/device at
-        smaller sizes. The max width can be changed with one line of CSS and all columns will resize accordingly. The
-        syntax is simple and it makes coding responsive much easier. Go ahead, resize the browser. </p>
+      <h5 class="">گرید</h5>
+      <p>
+        گرید یک سیستم جدولی با ۱۲ ستون سیال میباشد. ماکزیمم عرض آن ۹۶۰ پیکسل بوده و نسبت به اندازه مرورگر یا دستگاه
+        اندازه گرید بطور خودکار تنظیم میشود.
+        ماکزیمم عرض با یک خط سی اس اس به اندازه دلخواه میتواند در بیاید و سایر المان‌ها بصورت خودکار اندازه خود را وفق
+        میدهند. کد ساده است و ایجاد صفحات واکنش‌گرا را بسیار ساده میکند. همین الآن امتحان کنید و اندازه مرورگرتان را
+        تغییر دهید.
+
+      </p>
       <div class="example-grid docs-example">
         <div class="row">
-          <div class="one column" lang='en'>One</div>
-<div class="eleven columns" lang='en'>Eleven</div>
+          <div class="one column">One</div>
+          <div class="eleven columns">Eleven</div>
         </div>
         <div class="row">
-          <div class="two columns" lang='en'>Two</div>
-          <div class="ten columns" lang='en'>Ten</div>
+          <div class="two columns">Two</div>
+          <div class="ten columns">Ten</div>
         </div>
         <div class="row">
           <div class="three columns">Three</div>
@@ -206,10 +218,11 @@
 
       <!-- CODE EXAMPLE ———————————————————————————————————————— -->
       <pre class="code-example">
-<code class="code-example-body prettyprint"><!-- .container is main centered wrapper -->
+<code class="code-example-body prettyprint">
+<!--  کلاس ظرف اصلی محسوب میشود و محتویات داخلی‌اش وسط چین هستند .container -->
 <div class="container">
 
-  <!-- columns should be the immediate child of a .row -->
+  <!--   باشند .row ستون‌ها باید زیرشاخه مستقیم-->
   <div class="row">
     <div class="one column">One</div>
     <div class="eleven columns">Eleven</div>
@@ -243,7 +256,7 @@
 
     <!-- Typography -->
     <div class="docs-section" id="typography">
-      <h6 class="docs-header">Typography</h6>
+      <h5 class="">تایپوگرافی</h5>
       <p>Type is all set with the <code>rems</code>, so font-sizes and spacial relationships can be responsively sized
         based on a single <code>&lt;html&gt;</code> font-size property. Out of the box, Skeleton never changes the
         <code>&lt;html&gt;</code> font-size, but it's there in case you need it for your project. All measurements are
@@ -296,23 +309,23 @@
 
     <!-- Buttons -->
     <div class="docs-section" id="buttons">
-      <h6 class="docs-header">Buttons</h6>
+      <h5 class="">دکمه‌ها</h5>
       <p>Buttons come in two basic flavors in Skeleton. The standard <code>&lt;button&gt;</code> element is plain,
         whereas the <code>.button-primary</code> button is vibrant and prominent. Button styles are applied to a number
         of appropriate form elements, but can also be arbitrarily attached to anchors with a <code>.button</code>
         class.</p>
       <div class="docs-example">
         <div>
-          <a class="button" href="#">Anchor button</a>
-          <button>Button element</button>
-          <input type="submit" value="submit input">
-          <input type="button" value="button input">
+          <a class="button" href="#"> دکمه Anchor </a>
+          <button>المان دکمه</button>
+          <input type="submit" value="ارسال فرم">
+          <input type="button" value="دکمه">
         </div>
         <div>
-          <a class="button button-primary" href="#">Anchor button</a>
-          <button class="button-primary">Button element</button>
-          <input class="button-primary" type="submit" value="submit input">
-          <input class="button-primary" type="button" value="button input">
+          <a class="button button-primary" href="#">دکمه Anchor</a>
+          <button class="button-primary">دکمه</button>
+          <input class="button-primary" type="submit" value="ارسال فرم">
+          <input class="button-primary" type="button" value="دکمه">
         </div>
       </div>
 
@@ -339,32 +352,34 @@
 
     <!-- Forms -->
     <div class="docs-section" id="forms">
-      <h6 class="docs-header">Forms</h6>
-      <p>Forms are a huge pain, but hopefully these styles make it a bit easier. All inputs, select, and buttons are
-        normalized for a common height cross-browser so inputs can be stacked or placed alongside each other.</p>
+      <h5 class="">فرم‌ها</h5>
+      <p>
+       استفاده از فرم‌ها در طراحی‌های واکنشگرا به همراه دردسر است، این استایل‌ها کار را کمی راحت‌تر میکنند.
+       تمامی المان‌های فرم با ارتفاع متناسبی طراحی شده‌اند و کنار هم و همچنین بر روی همدیگر می توانند قرار بگیرند.
+      </p>
       <div class="docs-example docs-example-forms">
         <form>
           <div class="row">
             <div class="six columns">
-              <label for="exampleEmailInput">Your email</label>
-              <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+              <label for="exampleEmailInput">ایمیل شما</label>
+              <input class="u-full-width" type="email" placeholder="ایمیل خود را اینجا وارد کنید" id="exampleEmailInput">
             </div>
             <div class="six columns">
-              <label for="exampleRecipientInput">Reason for contacting</label>
+              <label for="exampleRecipientInput">دلیل تماس</label>
               <select class="u-full-width" id="exampleRecipientInput">
-                <option value="Option 1">Questions</option>
-                <option value="Option 2">Admiration</option>
-                <option value="Option 3">Can I get your number?</option>
+                <option value="Option 1">سوال</option>
+                <option value="Option 2">انتخاب نخست</option>
+                <option value="Option 3">انتخاب شماره دو</option>
               </select>
             </div>
           </div>
-          <label for="exampleMessage">Message</label>
-          <textarea class="u-full-width" placeholder="Hi Dave &hellip;" id="exampleMessage"></textarea>
+          <label for="exampleMessage">پیام</label>
+          <textarea class="u-full-width" placeholder="سلام فرزان ..." id="exampleMessage"></textarea>
           <label class="example-send-yourself-copy">
             <input type="checkbox">
-            <span class="label-body">Send a copy to yourself</span>
+            <span class="label-body">ارسال یک نسخه به خودم</span>
           </label>
-          <input class="button-primary" type="submit" value="Submit">
+          <input class="button-primary" type="submit" value="ارسال">
         </form>
       </div>
 
@@ -408,19 +423,19 @@
 
     <!-- Lists -->
     <div class="docs-section" id="lists">
-      <h6 class="docs-header">Lists</h6>
+      <h5 class="">لیست‌ها</h5>
       <div class="row docs-example">
         <div class="six columns">
           <ul>
-            <li>Unordered lists have basic styles</li>
+            <li>لیست‌ها یک نمای ساده دارند</li>
             <li>
-              They use the circle list style
+              از دایره برای نشان دادن لیست استفاده شده است
               <ul>
-                <li>Nested lists styled to feel right</li>
-                <li>Can nest either type of list into the other</li>
+                <li>لیست‌های تو در تو نیز میتوان ایجاد کرد</li>
+                <li>یک سطر دیگر در لیست تو در تو</li>
               </ul>
             </li>
-            <li>Just more list items mama san</li>
+            <li>این هم یک سطر دیگر در لیست</li>
           </ul>
         </div>
         <div class="six columns">
@@ -463,7 +478,7 @@
 
     <!-- Code -->
     <div class="docs-section" id="code">
-      <h6 class="docs-header">Code</h6>
+      <h5 class="">تکه کد</h5>
       <p>Code styling is kept basic – just wrap anything in a <code>&lt;code&gt;</code> and it will appear like <code>this</code>.
         For blocks of code, wrap a <code>&lt;code&gt;</code> with a <code>&lt;pre&gt;</code>.</p>
       <div class="docs-example">
@@ -489,7 +504,7 @@
 
     <!-- Tables -->
     <div class="docs-section" id="tables">
-      <h6 class="docs-header">Tables</h6>
+      <h5 class="docs-header">جدول‌ها</h5>
       <p>Be sure to use properly formed table markup with <code>&lt;thead&gt;</code> and <code>&lt;tbody&gt;</code>
         when building a <code>table</code>.</p>
       <div class="docs-example">
@@ -555,7 +570,7 @@
 
     <!-- Queries -->
     <div class="docs-section" id="queries">
-      <h6 class="docs-header">Media queries</h6>
+      <h5 class="">Media queries</h5>
       <p>Skeleton uses media queries to serve its scalable grid, but also has a list of queries for convenience of
         styling your site across devices. The queries are mobile-first, meaning they target <code>min-width</code>.
         Mobile-first queries are how Skeleton's grid is built and is the preferrable method of organizing CSS. It means
@@ -608,7 +623,7 @@
 
     <!-- Utilities and Misc. -->
     <div class="docs-section" id="utilities">
-      <h6 class="docs-header">Utilities</h6>
+      <h5 class="">ابزارها</h5>
       <p>Skeleton has a number of small utility classes that act as easy-to-use helpers. Sometimes it's better to use a
         utility class than create a whole new class just to float an element.</p>
 
@@ -647,7 +662,7 @@
 
     <!-- Examples -->
     <div class="docs-section examples" id="examples">
-      <h6 class="docs-header">مثال</h6>
+      <h5 class="">مثال</h5>
       <div class="row example">
         <a class="example-screenshot-wrapper" target="_blank" href="examples/landing">
           <img class="example-screenshot" src="images/examples/landing.jpg">
