translated the landing page

--- a/examples/landing/index.html
+++ b/examples/landing/index.html
@@ -41,8 +41,9 @@
     <div class="container">
       <div class="row">
         <div class="one-half column">
-          <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-          <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a>
+          <!-- <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4> -->
+          <h4 class="hero-heading">دیگر سایت‌های غیر ریسپانسیو نسازید. از همه جا کاربر داشته باشید.  </h4>
+          <a class="button button-primary" href="http://getskeleton.com">اسکلت را امتحان کنید</a>
         </div>
         <div class="one-half column phones">
           <img class="phone" src="images/iphone.png">
@@ -57,18 +58,18 @@
       <div class="row">
         <div class="one-third column value">
           <h2 class="value-multiplier">67%</h2>
-          <h5 class="value-heading">Purchase Increase</h5>
-          <p class="value-description">Percentage of users more likely to purchase on mobile friendly site.</p>
+          <h5 class="value-heading">افزایش فروش</h5>
+          <p class="value-description">احتمال فروش سایت‌هایی که بر روی موبایل هم قابل مشاهده است بیشتر است.</p>
         </div>
         <div class="one-third column value">
           <h2 class="value-multiplier">90%</h2>
-          <h5 class="value-heading">Multi-device Users</h5>
-          <p class="value-description">Most of the world accesses the internet on multiple devices.</p>
+          <h5 class="value-heading">کاربران از انواع دستگاه‌ها</h5>
+          <p class="value-description">کاربران در سراسر دنیا از دستگاه‌های مختلف برای دسترسی به اینترنت استفاده میکنند.</p>
         </div>
         <div class="one-third column value">
           <h2 class="value-multiplier">66%</h2>
-          <h5 class="value-heading">Sad Users</h5>
-          <p class="value-description">Percentage of users that are frustrated with page load times.</p>
+          <h5 class="value-heading">کاربران ناراضی</h5>
+          <p class="value-description">کاربرانی که بیش از حد برای لود شدن صفحه و سایت منتظر میمانند ناراضی میشوند.</p>
         </div>
       </div>
     </div>
@@ -76,16 +77,16 @@
 
   <div class="section get-help">
     <div class="container">
-      <h3 class="section-heading">Need help getting started?</h3>
-      <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If you want to learn more, just visit the documentation!</p>
-      <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
+      <h3 class="section-heading">برای شروع نیاز به کمک دارید؟</h3>
+      <p class="section-description">اسکلت برای شروع ایجاد سایت‌های ریسوانسیو راه حلی ساده است. اگر میخواهید بیشتر در مورد اسکلت بدانید به داکیومنتیشن آن سر بزنید.</p>
+      <a class="button button-primary" href="http://getskeleton.com">چگونه از اسکلت استفاده کنم؟</a>
     </div>
   </div>
 
   <div class="section categories">
     <div class="container">
-      <h3 class="section-heading">Responsive Images</h3>
-      <p class="section-description">Skeleton images sit easily in grid with .u-max-full-width class. I suggest exploring solution to serving different images based on device size.</p>
+      <h3 class="section-heading">تصاویر ریسپانسیو</h3>
+      <p class="section-description">تصاویر به راحتی در گرید‌های اسکلت جای میگیرند و میتوانید از کلاس .u-max-full-width استفاده کنید.</p>
       <div class="row">
         <div class="one-half column category">
           <img class="u-max-full-width" src="images/placeholder.png">
