fixed some urls

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container">
     <section class="header">
       <h2 class="title">یک ساختار آماده خیلی ساده‌ و ریسپانسیو</h2>
-      <a class="button button-primary" href="https://github.com/dhg/Skeleton/releases/download/2.0.4/Skeleton-2.0.4.zip"
+      <a class="button button-primary" href="https://github.com/pharzan/Skeleton/releases/download/2.0.4/Skeleton-2.0.4.zip"
         onClick="_gaq.push(['_trackEvent', 'skeleton', 'download'])">دانلود</a>
       <div class="value-props row">
         <div class="four columns value-prop">
@@ -102,28 +102,28 @@
               </ul>
             </div>
           </li>
-          <li class="navbar-item"><a class="navbar-link" href="#examples">مثال</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#examples">نمونه</a></li>
           <li class="navbar-item">
             <a class="navbar-link" href="#" data-popover="#moreNavPopover">بیشتر</a>
             <div id="moreNavPopover" class="popover">
               <ul class="popover-list">
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton">گیت‌هاب</a>
+                  <a class="popover-link" href="https://github.com/pharzan/Skeleton">گیت‌هاب</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#browser-support">مرورگر</a>
+                  <a class="popover-link" href="https://github.com/pharzan/Skeleton#browser-support">مرورگر</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#license">لایسنی</a>
+                  <a class="popover-link" href="https://github.com/pharzan/Skeleton#license">لایسنی</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#extensions">افضونه</a>
+                  <a class="popover-link" href="https://github.com/pharzan/Skeleton#extensions">افضونه</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton/releases">نسخه‌ها</a>
+                  <a class="popover-link" href="https://github.com/pharzan/Skeleton/releases">نسخه‌ها</a>
                 </li>
                 <li class="popover-item">
-                  <a class="popover-link" href="https://github.com/dhg/Skeleton#colophon">Colophon</a>
+                  <a class="popover-link" href="https://github.com/pharzan/Skeleton#colophon">Colophon</a>
                 </li>
               </ul>
             </div>
@@ -147,13 +147,13 @@
       <!-- <p>Love Skeleton and want to Tweet it, share it, or star it? Well, I appreciate that <3 </p>  -->
       <p>از اسکلت خوشت اومده و میخوای به اشتراک بذاری یا یه ستاره گیت‌هاب بدی؟ خب ممنونم :) </p>
 
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.getskeleton.com" data-text="Skeleton - A dead simple, responsive boilerplate."
-        data-via="dhg" data-related="dhg">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://getskeleton.ir" data-text="یک ساختار آماده برای پروژه‌های وب - سریع و ریسپانسیو #CSS"
+        data-via="pharzan" data-related="pharzan">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       <!-- <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.getskeleton.com&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=true&amp;height=21&amp;appId=151131931646052" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px; width:140px" allowTransparency="true"></iframe> -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=dhg&repo=Skeleton&type=watch&count=true" allowtransparency="true"
+      <iframe src="//ghbtns.com/github-btn.html?user=pharzan&repo=Skeleton&type=watch&count=true" allowtransparency="true"
         frameborder="0" scrolling="0" width="110" height="20"></iframe>
-      <iframe src="http://ghbtns.com/github-btn.html?user=dhg&repo=Skeleton&type=fork&count=true" allowtransparency="true"
+      <iframe src="//ghbtns.com/github-btn.html?user=pharzan&repo=Skeleton&type=fork&count=true" allowtransparency="true"
         frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
 
@@ -662,7 +662,7 @@
 
     <!-- Examples -->
     <div class="docs-section examples" id="examples">
-      <h5 class="">مثال</h5>
+      <h5 class="">نمونه</h5>
       <div class="row example">
         <a class="example-screenshot-wrapper" target="_blank" href="examples/landing">
           <img class="example-screenshot" src="images/examples/landing.jpg">
@@ -673,7 +673,7 @@
             with just the Skeleton grid and a few custom styles. The entire demo is ~150 lines of CSS including
             comments (most of which is positioning the phones at the top).</p>
           <a class="button" href="examples/landing" target="_blank">Demo</a>
-          <a class="button" href="https://github.com/dhg/Skeleton/tree/gh-pages/examples/landing" target="_blank">Source</a>
+          <a class="button" href="https://github.com/pharzan/Skeleton/tree/gh-pages/examples/landing" target="_blank">Source</a>
         </div>
       </div>
       <div class="row example">
