--- a/index.html
+++ b/index.html
@@ -317,10 +317,8 @@
     <!-- Buttons -->
     <div class="docs-section" id="buttons">
       <h5 class="">دکمه‌ها</h5>
-      <p>Buttons come in two basic flavors in Skeleton. The standard <code>&lt;button&gt;</code> element is plain,
-        whereas the <code>.button-primary</code> button is vibrant and prominent. Button styles are applied to a number
-        of appropriate form elements, but can also be arbitrarily attached to anchors with a <code>.button</code>
-        class.</p>
+      <p>دکمه‌ها در دو نوع ساده موجود هستند. نوع استاندارد <code>&lt;button&gt;</code> و در آن همه چیز ساده است و با تگ <code>.button-primary</code>
+      که دارای استایل میباشد. با <code>.button</code> را به تگ‌های anchor نیز میتوانید اضافه کنید و تبدیل به دکمه کنید</p>
       <div class="docs-example">
         <div>
           <a class="button" href="#"> دکمه Anchor </a>
